maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:10: error: ')' expected but 'if' found.
      if(!hasWallLeft())
      ^IslandMaze:19: error: expected class or object definition
def keepHandOnSideWall() {
^IslandMaze:27: error: expected class or object definition
def hasWallLeft() : Boolean = {
^IslandMaze:34: error: expected class or object definition
def placeWallLeft(){
^IslandMaze:41: error: expected class or object definition
def northOK() : Boolean = {
^IslandMaze:49: error: expected class or object definition
def goNorth() {
^IslandMaze:57: error: Unmatched closing brace '}' ignored here
}
^